# example_os

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  bochsrc  grub.cfg  index.md  sitemap.txt
_posts/: 2018-6-4-A stack trace for your OS.md  2018-6-4-Entering user mode in long mode.md  2018-6-5-Context switching and preemptive multitasking [0].md
boot_disk/: test.txt
boot_disk/kernel/: symbols.table
docs/: _config.yml  index.md
docs/_site/: index.html
docs/_site/tutorials/: stack_trace.html
docs/tutorials/: stack_trace.md
kernel/: CMakeLists.txt  Cargo.toml  linker.ld  x86_64-example_os.json
kernel/assembly/: boot_checks.asm  boot_entry.asm  boot_paging.asm  constants.inc  multiboot_header.asm
kernel/src/: lib.rs
kernel/src/debug/: mod.rs  stack_trace.rs  symbols.rs
kernel/src/display/: mod.rs
kernel/src/display/text_mode/: buffer.rs  functions.rs  low_depth_colour.rs  mod.rs  position.rs  printer.rs  text_display.rs
kernel/src/display/text_mode/buffers/: boot_buffer.rs  mod.rs  window_buffer.rs
kernel/src/display/text_mode/drivers/: global_facade.rs  mod.rs  vga_text_driver.rs
kernel/src/display/text_mode/printers/: list_printer.rs  mod.rs  scroll_printer.rs  selectable_list.rs
kernel/src/display/text_mode/utility/: boot_status.rs  mod.rs
kernel/src/display/text_mode/writers/: debug_writer.rs  default_writer.rs  error_writer.rs  mod.rs
kernel/src/graph/: functions.rs  location.rs  mod.rs  provider.rs  resource.rs
kernel/src/graph/providers/: memory_disk.rs  mod.rs  root.rs
kernel/src/graph/resources/: memory_file.rs  mod.rs
kernel/src/interrupts/: functions.rs  gdt.rs  gdt_descriptor.rs  handlers.rs  mod.rs  pic_functions.rs  pit_functions.rs
kernel/src/keyboard/: functions.rs  key_event.rs  key_other.rs  key_printable.rs  mod.rs
kernel/src/keyboard/drivers/: mod.rs  ps2_driver.rs
kernel/src/memory/: address.rs  frame.rs  frame_allocator.rs  functions.rs  memory_area.rs  mod.rs
kernel/src/memory/frame_allocators/: huge_frame_divider.rs  mod.rs  tiny_allocator.rs
kernel/src/memory/generic_allocators/: boot_allocator.rs  fixed_frame_recycler.rs  frame_recycler.rs  global_frame_allocator.rs  mod.rs  post_boot_allocator.rs
kernel/src/memory/huge_frame_allocators/: huge_boot_bump_allocator.rs  huge_bump_allocator.rs  mod.rs
kernel/src/paging/: active_page_table.rs  address.rs  functions.rs  inactive_page_table.rs  mod.rs  page.rs  page_entry.rs  page_iter.rs  page_mapper.rs  page_table.rs  reserved.rs  table_level.rs  temporary_page.rs
kernel/src/shell/: evaluator.rs  functions.rs  kernel_shell.rs  mod.rs  process.rs  shell_display.rs
kernel/src/shell/evaluators/: memory.rs  memory_test.rs  mod.rs  root.rs
kernel/src/structures/: fixed_stack.rs  frame_store.rs  mod.rs
kernel/src/system_call/: functions.rs
kernel/src/task/: functions.rs  mod.rs  scheduler.rs  thread.rs
kernel/src/task/loaders/: flat_binary.rs  functions.rs  mod.rs  stack.rs
kernel/src/task/schedulers/: mod.rs  round_robin.rs
kernel/src/tests/: mod.rs
kernel/src/tests/display/: mod.rs
kernel/src/tests/display/text_mode/: buffer.rs  display_facade.rs  dummy_display.rs  mod.rs  scroll_printer.rs
kernel/src/tests/memory/: fixed_frame_recycler.rs  memory_area.rs  mod.rs
kernel/src/tests/structures/: frame_store.rs  mod.rs
kernel/src/tests/utility/: math.rs
kernel/src/utility/: convert.rs  global.rs  math.rs  mod.rs  multiboot_structure.rs  pseudo_random.rs
tutorials/: stack_trace.md  user_mode.md
